online games added

--- a/mobile.css
+++ b/mobile.css
@@ -1,6 +1,11 @@
 @media screen and (max-width:576px){
-    .navbar{
+    
+    header{
+        height: max-content;
+
+    }.navbar{
         flex-direction: column;
+        height: max-content;
     }
     .nav-items ul{
         flex-direction: column;
@@ -12,4 +17,26 @@
         margin: 20px;
     }
   
+    .banner{
+        flex-direction: column-reverse;
+        height: max-content;
+        margin: 10px auto;
+        width: 100%;
+    }
+    .banner .banner-img{
+        width:100%;
+        height: 100%;
+       
+    }
+    .banner-img img{
+        padding: 10px auto;
+    }
+    .banner-content{
+        
+        width:90%;
+        margin: 20px auto;
+        height:100%;
+        padding: 20px auto;
+    }
+    
 }
