--- a/mobile.css
+++ b/mobile.css
@@ -47,17 +47,54 @@
         
     }
     .games-img-box{
-        width: 100%;
+        width: 80%;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        position: relative;
+        
     }
     .overlay {
-   
-  
         position: absolute;
-        top:0;
-       left:57px;
+        left: 39px;
     }
-}
+    .play-instant-section{
+        width:100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0px;
+        padding-left: 20px;
+    }
+    .play-instant {
+        width:100%;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+   .play-instant-content{
+        width:80%;
+        justify-content: center;
+    }
+    .play-instant-img{
+        width:80%;
+        margin: 10px 30px;
+        flex-direction: column;
+        justify-content: right;
+        align-items: center;
+        
+      
+        
+    }
+    .play-instant-limg img{
+        width:100%;
+
+    }
+    .play-instant-simg img{
+        width:40%;
+        margin-right: 20px;
+       
+        
+    }
+} 
