--- a/mobile.css
+++ b/mobile.css
@@ -103,17 +103,16 @@
         width:100%;
     }
     .game-types{
-        width: 180px;
-        height: 50px;
-      
-        margin:10px 5px;
+       padding: 10px 5px;
+        margin:8px 4px;
+        min-width: 130px;
       
     }
-    /* .game-types img{
+    .game-types img{
         width: 25%;
     }
     .game-types h3{
-        width: 75%;
-        width: 12px;
-    } */
+        
+       font-size:12px;
+    }
 } 
