online-games-responsivess problem solved

--- a/style.css
+++ b/style.css
@@ -84,18 +84,20 @@ header{
 .banner{
     margin: 0;
     width:100%;
+    height: 80svh;
     padding-top: 0px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-   
-    height: 80svh;
+   height: max-content;
 }
 .banner-content{
     width:50%;
-    margin: 0px;
+   height: 80svh;
+    /* margin: 0px auto; */
+    padding-left: 30px;
     background-image: url(images/Group\ 14.png);
-    height: 80svh;
+    /* height: 80svh; */
     background-size: cover;
     background-repeat: no-repeat;
     background-size: cover;
@@ -104,14 +106,16 @@ header{
     background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
-    justify-content:space-around;
-   
+ 
+    align-items:flex-start;
+    justify-content: center;
     text-align: left;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
     
 
 }
 .banner-content h3{
-
     color: #0B0223;
     margin-bottom: 0px;
     font-family: var(--font-family);
@@ -120,12 +124,12 @@ header{
     font-weight: 600;
     line-height: normal;
     text-transform: uppercase;
-     ;
+    
+    
     
 }
-.gradient-text{
+.gradient-text {
    margin: 0px;
- padding: 0px;
     font-family: var(--font-family);
     font-size: 60px;
     text-transform: uppercase;
@@ -133,29 +137,36 @@ header{
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
+    
 }
 .banner-content p{
-    margin:0px;
+    /* margin:0px;
+    padding: 0px; */
     font-family: Work Sans;
     font-size: 18px;
     text-align: left;
     padding: 0px;
     margin-top:0px;
     line-height: 5px;
+   
  }
 
 .banner-img{
     width:50%;
+   height: 80svh;
     margin: 0 auto;
     display: flex;
-    justify-content: center;
-    align-items: baseline;
+   flex-direction: column;
+   justify-content:space-between;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
 
 }
 
 .banner-img img{
-    width:80%;
-    height:auto;
+    width:75%;
+    margin-bottom: -5px;
+  
 
 }
 .btn{
@@ -214,6 +225,10 @@ header{
 
 .online-games{
     width:100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   
    
 }
@@ -245,20 +260,29 @@ header{
 
 }
 .online-games-img-section{
-    margin: 0 auto;
+    margin: 0 ;
     width:80%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
 
 
 }
 .games-img-box{
+    
     position: relative;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+   
 }
 .games-img-box img{
-    width:300px;
-    margin-right: 10px ;
+    width: 280px;
+    height: 350px;
+   
+   
+  
    
    
 
@@ -268,10 +292,9 @@ header{
   
     position: absolute;
     top:0;
-    width: 300px;
+    width: 280px;
     height: 350px;
     border-radius: 15px;
-    background-color: #8758F1;
     border: 2px solid var(--secondary-color);
     display:flex;
     flex-direction: column;
@@ -382,8 +405,7 @@ header{
 
 }
 .game-types{
-    /* width: 200px;
-    height: 60px; */
+   
     min-width: 130px;
     height:45px;
     display: flex;
@@ -434,6 +456,7 @@ line-height: normal;
 
 }
 .social-icon{
+    width: 50%;
     margin: 20px auto;
     display: flex;
     flex-wrap: wrap;
