--- a/mobile.css
+++ b/mobile.css
@@ -23,30 +23,52 @@
         height: 100%;
         margin: 10px auto;
         width: 100%;
+        padding: 0px auto;
+        padding-bottom: 0px;
+        margin: 0px;
     }
     .banner .banner-img{
         width:100%;
         height: 100%;
+        padding: 0px auto;
+        padding-bottom: 0px;
+        margin: 0px;
        
     }
     .banner-img img{
-        padding: 10px auto;
+        padding: 0px auto;
+        padding-bottom: 0px;
+        margin: 0px;
     }
     .banner-content{
         
         width:90%;
         margin: 20px auto;
         height:100%;
-        padding: 20px auto;
+       
+        
+        margin-bottom:0px;
+        padding: 0px auto;
+        padding-bottom: 0px;
+        margin: 0px;
     }
     
 
     .online-games-img-section{
         flex-direction: column;
-       width: 100%;
+        width:80%;
+       
         
     }
     .games-img-box{
+        width: 300px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+    }
+    /* .games-img-box{
        
         display: flex;
         flex-direction: column;
@@ -54,7 +76,7 @@
         align-items: center;
         
         
-    }
+    } */
   
     .play-instant-section{
         width:100%;
@@ -114,5 +136,13 @@
     .game-types h3{
         
        font-size:12px;
+    }
+    .social-icon {
+        width: 45%;
+    }
+    .social-icon svg{
+        max-width: 40px;
+        max-height: 26px;
+        margin: 15px;
     }
 } 
