--- a/mobile.css
+++ b/mobile.css
@@ -2,6 +2,7 @@
     
     header{
         height: max-content;
+        margin: 0px;
 
     }.navbar{
         flex-direction: column;
@@ -27,32 +28,54 @@
         padding-bottom: 0px;
         margin: 0px;
     }
-    .banner .banner-img{
+    .banner-img{
         width:100%;
         height: 100%;
-        padding: 0px auto;
-        padding-bottom: 0px;
-        margin: 0px;
+        display: flex;
+        justify-content: center;
+        align-items:end;
+     
        
     }
     .banner-img img{
-        padding: 0px auto;
-        padding-bottom: 0px;
-        margin: 0px;
+        width: 80%;
+       
+      
+      
     }
     .banner-content{
         
         width:90%;
-        margin: 20px auto;
+        margin: 0px auto;
         height:100%;
        
-        
-        margin-bottom:0px;
-        padding: 0px auto;
-        padding-bottom: 0px;
+    }
+
+   .we-are-gamer{
+    background-color: transparent;
+        margin-top: 0px;
+        flex-direction: column;
+        width: 100%;
+    }
+    .gamer-content{
+        width: 100%;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
         margin: 0px;
+        padding: 20px;
+        text-align: center;
     }
     
+     .gamer-img{
+        width: 100%;
+        display: flex;
+        flex-direction: column-reverse;justify-content: center;
+        align-items: center;
+        margin: 0px;
+        text-align: center;
+    }
+   
 
     .online-games-img-section{
         flex-direction: column;
