--- a/style.css
+++ b/style.css
@@ -154,20 +154,16 @@ header{
 .banner-img{
     width:50%;
    height: 80svh;
-    margin: 0 auto;
     display: flex;
-   flex-direction: column;
-   justify-content:space-between;
-    margin-bottom: 0px;
-    padding-bottom: 0px;
+   justify-content:center;
+   align-items: center;
+    padding-top: 40px;
+    box-sizing: border-box;
 
 }
 
 .banner-img img{
     width:75%;
-    margin-bottom: -5px;
-  
-
 }
 .btn{
     padding: 10px 20px;
@@ -211,7 +207,7 @@ header{
     width:40%;
     margin: auto 0px;
     text-align: end;
-    padding-right:5px ;
+    padding-right:25px ;
 
 }
 .gamer-content h1{
