banner section modified

--- a/mobile.css
+++ b/mobile.css
@@ -43,6 +43,10 @@
       
       
     }
+    .banner-content-area{
+        width:100%;
+    
+    }
     .banner-content{
         
         width:90%;
