--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 body{
     margin: 0;
     padding: 0;
+    font-family: var( --font-family);
 }
 header{
     background-color: #FFF;
@@ -98,27 +99,31 @@ header{
     align-items: center;
    height: max-content;
 }
-.banner-content{
+.banner-content-area{
     width:50%;
-   height: 80svh;
-    /* margin: 0px auto; */
-    padding-left: 30px;
+    display: flex;
+    align-items:center;
+    justify-content: center;
     background-image: url(images/Group\ 14.png);
-    /* height: 80svh; */
     background-size: cover;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+
+}
+.banner-content{
+    width:50%;
+   height: 80svh;
     background-size: 100%;
     background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
- 
     align-items:flex-start;
     justify-content: center;
     text-align: left;
     padding-bottom: 0px;
     margin-bottom: 0px;
+    padding: 0px auto 0px auto;
     
 
 }
