--- a/mobile.css
+++ b/mobile.css
@@ -7,6 +7,7 @@
     }.navbar{
         flex-direction: column;
         height: max-content;
+        box-shadow: none;
     }
     .nav-items ul{
         flex-direction: column;
@@ -44,15 +45,24 @@
       
     }
     .banner-content-area{
-        width:100%;
+        width:90%;
+        margin: 0px;
+        padding: 0px;
+       
     
     }
     .banner-content{
-        
+        align-items:flex-start;
+    justify-content: center;
+        padding: 10px 0;
         width:90%;
-        margin: 0px auto;
-        height:100%;
        
+        height:100%;
+      
+       
+    }
+    .banner-content h3{
+        margin-top: 0px;
     }
 
    .we-are-gamer{
@@ -60,15 +70,18 @@
         margin-top: 0px;
         flex-direction: column;
         width: 100%;
+        justify-content: center;
+        align-items: center;
     }
     .gamer-content{
-        width: 100%;
+        width: 90%;
         flex-direction: column-reverse;
         justify-content: center;
         align-items: center;
         margin: 0px;
-        padding: 20px;
+        padding: 10px;
         text-align: center;
+        box-sizing: border-box;
     }
     
      .gamer-img{
@@ -121,20 +134,24 @@
         justify-content: center;
         align-items: center;
     }
-   .play-instant-content{
-        width:80%;
-        justify-content: center;
+    .play-instant-content h1 {
+        width: 400px;
+        text-align: center;
+      
     }
-    .play-instant-img{
+    .play-instant-content p {
+        width: 400px;
+        text-align: center;
+       
+    }
+    /* .play-instant-img{
         width:80%;
         margin: 10px 30px;
         flex-direction: column;
         justify-content: right;
         align-items: center;
         
-      
-        
-    }
+    } */
     .play-instant-limg img{
         width:100%;
 
@@ -152,26 +169,46 @@
 
     .game-types-container{
         width:100%;
+        margin: 0px;
+        padding: 0px;
     }
     .game-types{
-       padding: 10px 5px;
+       padding: 10px 4px;
         margin:8px 4px;
-        min-width: 130px;
+        
       
     }
     .game-types img{
-        width: 25%;
+        width: 20%;
     }
     .game-types h3{
         
-       font-size:12px;
+       font-size:10px;
+    }
+    .footer-item{
+        width: 80%;
+        display:grid;
+        grid-template-columns: repeat(3,1fr);
+
     }
     .social-icon {
-        width: 45%;
+        width: 50%;
+        display:grid;
+        grid-template-columns: repeat(3,1fr);
     }
     .social-icon svg{
         max-width: 40px;
         max-height: 26px;
         margin: 15px;
+    }
+    .quick-access{
+        width: 80%;
+        display:grid;
+        grid-template-columns: repeat(2,1fr);
+
+    }
+    .copyright{
+        width: 50%;
+
     }
 } 
